Remove unnecessary options